--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,49 @@ body {
     justify-content: top; /* Center the content vertically */
     align-items: center; 
 }
+.popup {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+#warning {
+    background-color: black;
+    color: white;
+    font-size: larger;
+    width: 10em;
+    height: fit-content;
+    padding: 0.5em 1em;
+    border: 3px solid gray;
+}
+#confirm {
+    width: 7em;
+    height: 2em;
+    border-radius: 10px;
+    margin: 0;
+}
+.close-button {
+    float: middle;
+    font-size: 2em;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: red;
+    padding: 0.1em 0.3em;
+    border-radius: 5px;
+}
+.popup-content {
+    background-color: rgb(52, 53, 52);
+    padding: 20px;
+    border-radius: 5px;
+    border: 3px solid gray;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
 .content {
     border: unset;
 }
